--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,3 +6,20 @@ yarn-error.log*
 .nyc_output
 lib
 lib_test
+
+
+# testing
+/coverage
+db
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.vscode
+.env.local
+.env.test.local
+.env.development.local
+.env.staging.local
