--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,30 +1,22 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "lib": [
-      "esnext"
-    ],
-    "target": "es2015",
-    "outDir": "./lib",
-    "removeComments": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "preserveConstEnums": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "baseUrl": ".",
     "strict": true,
+    "sourceMap": true,
+    "outDir": "build",
+    "target": "es2017",
+    "incremental": true,
+    "module": "commonjs",
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "esModuleInterop": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "resolveJsonModule": true,
+    "noUnusedParameters": true,
+    "moduleResolution": "node",
+    "skipDefaultLibCheck": true,
+    "noFallthroughCasesInSwitch": true,
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*-spec.ts"
-  ]
+  "ts-node": { "files": true },
+  "include": ["typings/**/*.d.ts", "src", "__test__", "typings"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
