--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "birdie-test-backend",
   "version": "0.0.0",
-  "description": "backend",
+  "description": "birdie test backend",
   "license": "MIT",
   "files": [
     "lib"
@@ -9,34 +9,63 @@
   "main": "lib/index",
   "types": "lib/index",
   "scripts": {
-    "clean": "rimraf lib && rimraf coverage",
+    "predev": "cross-env NODE_ENV=development",
     "format": "prettier --write \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "test": "jest",
     "test:watch": "jest --watch",
+    "test": "npm run migrate && jest",
+    "migrate": "npx sequelize-cli db:migrate",
+    "pretest": "npm run create-sqlite-db; cross-env NODE_ENV=test;",
+    "posttest": "npm run drop-sqlite-db",
+    "drop-sqlite-db": "shx rm ./db/database.sqlite",
+    "create-sqlite-db": "shx mkdir db; shx touch db/database.sqlite",
     "dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "celebrate": "^14.0.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "http-errors": "^1.8.0",
+    "http-status": "^1.5.0",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
+    "sqlite3": "^5.0.2"
   },
+  "author": "Amakiri Joseph Lucky",
   "devDependencies": {
-    "@types/express": "^4.17.11",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
+    "@types/method-override": "^0.0.31",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^15.12.4",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.1.4",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "coveralls": "^3.1.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
+    "sequelize-cli-typescript": "^3.2.0-c",
+    "shx": "^0.3.3",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "typescript": "^4.2.4"
   },
   "engines": {
